--- a/docs/api-details/custom-encryption-keys.mdx
+++ b/docs/api-details/custom-encryption-keys.mdx
@@ -10,7 +10,7 @@ A Google Cloud Platform (GCP) project is required to manage your CMEK.
 </Info>
 
 
-Vital supports "Customer Managed Encryption Keys" (CMEK) for all data managed in our platform.
+Junction supports "Customer Managed Encryption Keys" (CMEK) for all data managed in our platform.
 To use a CMEK for your team, you may select from GCP supported vendors. These are:
 
 - [Fortranix](https://fortanix.com/solutions/use-case/ekm-for-gcp/)
