--- a/docs/api-details/rate_limiting.mdx
+++ b/docs/api-details/rate_limiting.mdx
@@ -20,7 +20,7 @@ You may encounter **429 Too Many Requests** in the these specific scenarios:
 
 | Endpoint                                    | Authentication Scheme | Rate Limit                  |
 | ------------------------------------------- | --------------------- | --------------------------- |
-| `POST /user/refresh/{user_id}`              | Vital API Key         | 8 per hour per user         |
+| `POST /user/refresh/{user_id}`              | Junction API Key         | 8 per hour per user         |
 
 <Note>
 Junction may adjust rate limiting based on real-world usage patterns. We will give you sufficient notices
