--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -111,7 +111,7 @@ The new [Prepare Team Custom Credentials](/api-reference/org-management/team-cus
 provides instructions for preparation of [Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) custom credentials.
 
 You can use the information to configure things like OAuth callback URI and the Webhook URI (if applicable), before activating it on your
-Vital Team through the [Set Team Custom Credential](/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials)
+Junction Team through the [Set Team Custom Credential](/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials)
 endpoint.
 
 <Info>
@@ -141,7 +141,7 @@ Check out the [ETL Pipelines](/webhooks/etl-pipelines#azure-event-hub) documenta
 
 ### Manage Team Brand Information (Apr 2024)
 
-You can now manage Brand Information of your Vital Teams through the Org Management API.
+You can now manage Brand Information of your Junction Teams through the Org Management API.
 
 <Accordion title="Details" defaultOpen icon="billboard" iconType="duotone">
   Team Brand Information is used in:
@@ -157,9 +157,9 @@ You can now manage Brand Information of your Vital Teams through the Org Managem
   [Create Team](/api-reference/org-management/team/create-team) endpoint documentation.
 </Accordion>
 
-### Vital Orgs and Org Management API (Apr 2024)
+### Junction Orgs and Org Management API (Apr 2024)
 
-We have introduced Vital Org, a new level that groups all your Vital Teams. Your Vital Teams have been
+We have introduced Junction Org, a new level that groups all your Junction Teams. Your Junction Teams have been
 transparently grouped and migrated to the new structure.
 
 <Accordion title="Details" defaultOpen icon="building" iconType="duotone">
@@ -169,7 +169,7 @@ transparently grouped and migrated to the new structure.
   2. user organization with diverging team-level configurations.
 
   We introduced the Org Management API because customers have asked for the programmatic access to
-  dyanmically create Vital Teams and manage different aspects of their Vital Teams.
+  dyanmically create Junction Teams and manage different aspects of their Junction Teams.
 
   <Info>
     Org Management API is available for [the Scale plan](https://tryvital.io/pricing).
