--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -344,7 +344,7 @@ enable the setting.
 </Accordion>
 
 ### Reject Duplicate Connections (Apr 2024)
-You can now configure your Vital Team through the [Org Management API](/api-reference/org-management/team/update-team)
+You can now configure your Junction Team through the [Org Management API](/api-reference/org-management/team/update-team)
 to reject duplicate wearable connections.
 
 <Accordion icon="person-military-pointing" iconType="duotone" title="Details" defaultOpen>
@@ -465,10 +465,10 @@ Check out the [User Resources Introspection](/api-reference/introspection/user-r
 Vital Sign-In Token is a new, user-scoped Authentication scheme for Vital Mobile SDKs.
 
 <Accordion icon="id-badge" iconType="duotone" title="Details" defaultOpen>
-It grants only user-scoped access to your mobile app sign-ins. This allows you to keep your Vital API Keys
+It grants only user-scoped access to your mobile app sign-ins. This allows you to keep your Junction Team API Keys
 as server-side secrets.
 
-We encourage all customers using Vital API Keys in their production mobile apps to
+We encourage all customers using Junction Team API Keys in their production mobile apps to
 migrate to the Vital Sign-In Token scheme.
 
 Check out the [SDK Authentication](/wearables/sdks/authentication#vital-sign-in-token) guide on how to migrate to
