--- a/docs/home/getting-support.mdx
+++ b/docs/home/getting-support.mdx
@@ -20,7 +20,7 @@ issue, enabling a quicker investigation turnaround.
 
 | Item                  | Remarks                                    |
 | --------------------- | ------------------------------------------ |
-| Your Vital Team ID    | -                                          |
+| Your Junction Team ID    | -                                          |
 | Your Vital region     | US or EU                                   |
 | The Vital User ID     | ...if the issue occurs on a specific user. |
 | The Vital environment | Sandbox, Production or both                |
@@ -36,9 +36,9 @@ issue, enabling a quicker investigation turnaround.
 | Auth Scheme        | Vital Sign-In Token, or Team API Key |
 
 
-### A Vital API endpoint
+### A Junction API endpoint
 
-When you encounter an unexpected response from the Vital API, please provide
+When you encounter an unexpected response from the Junction API, please provide
 the `traceparent` header value from the HTTP response you received if possible. This
 helps us narrow down the context surrounding your issue.
 
