--- a/docs/home/libraries.mdx
+++ b/docs/home/libraries.mdx
@@ -2,26 +2,26 @@
 title: "Libraries"
 ---
 
-We have created a few libraries to help you integrate with the Vital API. We'll continue to add support for more libraries as we add more devices. Email [support@tryvital.io](mailto:support@tryvital.io) for specific library support.
+We have created a few libraries to help you integrate with the Junction API. We'll continue to add support for more libraries as we add more devices. Email [support@tryvital.io](mailto:support@tryvital.io) for specific library support.
 
-### Typed Bindings of Vital API
+### Typed Bindings of Junction API
 
-These typed bindings track the Vital API OpenAPI Schema.
+These typed bindings track the Junction API OpenAPI Schema.
 
 |                                                                      |                                                      |
 | -------------------------------------------------------------------- | ---------------------------------------------------- |
-| [vital-java](https://github.com/tryVital/vital-java)                       | Vital API Java client                                    |
-| [vital-go](https://github.com/tryVital/vital-go)                           | Vital API Go client                                      |
-| [vital-node](https://www.npmjs.com/package/@tryvital/vital-node)     | Vital API Node.js client                                 |
-| [vital-python](https://pypi.org/project/vital)                       | Vital API Python client                                  |
+| [vital-java](https://github.com/tryVital/vital-java)                       | Junction API Java client                                    |
+| [vital-go](https://github.com/tryVital/vital-go)                           | Junction API Go client                                      |
+| [vital-node](https://www.npmjs.com/package/@tryvital/vital-node)     | Junction API Node.js client                                 |
+| [vital-python](https://pypi.org/project/vital)                       | Junction API Python client                                  |
 
 ### Mobile SDK
 |                                                                      |                                                      |
 | -------------------------------------------------------------------- | ---------------------------------------------------- |
-| [vital-ios](https://github.com/tryVital/vital-ios)                   | Vital iOS Client                                     |
-| [vital-android](https://github.com/tryVital/vital-android)           | Vital Android Client                                 |
-| [vital-flutter](https://github.com/tryVital/vital-flutter)           | Vital Flutter Client                                 |
-| [vital-react-native](https://github.com/tryVital/vital-react-native) | Vital React Native Client                            |
+| [vital-ios](https://github.com/tryVital/vital-ios)                   | Junction iOS Client                                     |
+| [vital-android](https://github.com/tryVital/vital-android)           | Junction Android Client                                 |
+| [vital-flutter](https://github.com/tryVital/vital-flutter)           | Junction Flutter Client                                 |
+| [vital-react-native](https://github.com/tryVital/vital-react-native) | Junction React Native Client                            |
 | [vital-connect](https://github.com/tryVital/vital-connect-rn)        | Whitelabel App using Vital's API                     |
 
 ### Web SDK
