--- a/docs/home/privacy.mdx
+++ b/docs/home/privacy.mdx
@@ -19,6 +19,6 @@ When we pull data from various wearable provider's this data goes through the Ev
 
 ### Retrieving Data
 
-When you request data from the Vital API, it is decrypted via the Evervault encryption proxy before being returned.
+When you request data from the Junction API, it is decrypted via the Evervault encryption proxy before being returned.
 
 <img src="/img/retreiving.png" alt="retreiving" />
