--- a/docs/snippets/link-sdk-provider.mdx
+++ b/docs/snippets/link-sdk-provider.mdx
@@ -1,7 +1,7 @@
 
 <Warning>
-Vital Link API covers **only** [cloud-based providers](/wearables/providers/introduction#cloud-based-providers).
+Junction Link API covers **only** [cloud-based providers](/wearables/providers/introduction#cloud-based-providers).
 
 Your mobile app has to manage connections with SDK-based providers — such as Apple HealthKit and Android Health
-Connect — through the [Vital Mobile Health SDK](/wearables/sdks/vital-health), separately from Vital Link.
+Connect — through the [Vital Mobile Health SDK](/wearables/sdks/vital-health), separately from Junction Link.
 </Warning>
