--- a/docs/wearables/connecting-providers/bring-your-own-oauth/overview.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/overview.mdx
@@ -77,7 +77,7 @@ endpoint to obtain the instructions to setup your OAuth application.
 
 <Step title="Set your application credentials">
 Use the [Set Team Custom Credentials](/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials) endpoint
-to apply your OAuth application credentials to your Vital Team.
+to apply your OAuth application credentials to your Junction Team.
 
 
 <AccordionGroup>
