--- a/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
+++ b/docs/wearables/connecting-providers/bring-your-own-oauth/sharing-credentials.mdx
@@ -28,7 +28,7 @@ a Redirect URI. The `/authorize` flow would then validate inbound requests again
 Most providers allow **only one** Redirect URI registration per OAuth application.
 
 This means your OAuth application cannot simutaneously support both your own existing OAuth callback endpoint, as well as
-[Vital Link](/wearables/connecting-providers/introduction) OAuth callback endpoint.
+[Junction Link](/wearables/connecting-providers/introduction) OAuth callback endpoint.
 
 
 ## Recommended Apporach
@@ -37,23 +37,23 @@ To support this credential sharing use case, Vital recommends you to:
 
 1. Continue to point your OAuth application at your existing OAuth callback endpoint;
 
-2. Extend your endpoint to [detect and redirect](#details) callbacks from Vital Link originiated OAuth requests to the
-   [Vital Link OAuth callback endpoint](#vital-oauth-callback-endpoint-url).
+2. Extend your endpoint to [detect and redirect](#details) callbacks from Junction Link originiated OAuth requests to the
+   [Junction Link OAuth callback endpoint](#vital-oauth-callback-endpoint-url).
 
 
 ```mermaid
 sequenceDiagram
-    participant Vital Link
+    participant Junction Link
     participant Your API
     participant BYOO Provider
     actor User Agent
     autonumber
-    Vital Link-->>User Agent: OAuth 2.0 Authorization Request URL
+    Junction Link-->>User Agent: OAuth 2.0 Authorization Request URL
     User Agent->>BYOO Provider: Navigate to URL (1)
     BYOO Provider-->>User Agent: Prompt
     User Agent-->>BYOO Provider: Approve or Deny
     BYOO Provider->>Your API: Redirect
-    Your API->>Vital Link: Redirect
+    Your API->>Junction Link: Redirect
 ```
 
 ### Details
@@ -67,18 +67,18 @@ existing OAuth callback endpoint.
 
 </Step>
 
-<Step title="Extend your existing OAuth callback endpoint with Vital Link awareness">
+<Step title="Extend your existing OAuth callback endpoint with Junction Link awareness">
 
 Your OAuth callback endpoints can rely on the `state` query parameter to differentiate the request
 origin, i.e., whether it is from Vital or from your own production systems.
 
-OAuth requests originated from Vital would have the **Vital Link Token** as the `state` query parameter.
-Vital Link Token is a JSON Web Token (JWT), so you can use the _unverified claims_ of the JWT as a discriminator.
+OAuth requests originated from Vital would have the **Junction Link Token** as the `state` query parameter.
+Junction Link Token is a JSON Web Token (JWT), so you can use the _unverified claims_ of the JWT as a discriminator.
 
-When you detect a valid Vital Link Token, perform a `307 Temporary Redirect`
+When you detect a valid Junction Link Token, perform a `307 Temporary Redirect`
 to the [Vital OAuth callback endpoint](#vital-oauth-callback-endpoint-url) and passing on _all_ the URL query parameters.
 
-The exact JWT structure of the Vital Link Token is as follows:
+The exact JWT structure of the Junction Link Token is as follows:
 
 
 <AccordionGroup>
@@ -89,19 +89,19 @@ A JSON Web Token (JWT).
 You need not verify the signature of this JWT.
 
 To prevent Cross-Site Request Forgery attacks, you must still check that the `aud` claim matches the
-expected [Vital Link API Base URL](#vital-link-api-base-url).
+expected [Junction Link API Base URL](#vital-link-api-base-url).
 </Warning>
 
 </Accordion>
 <Accordion title="Claim payload schema" defaultOpen>
 | Key                     | Value                                           |
 | ----------------------- | ----------------------------------------------- |
-| `aud`                   | Vital Link API Base URL                         |
-| `sub`                   | Vital Link Session ID                           |
-| `team_id`               | Vital Team ID                                   |
+| `aud`                   | Junction Link API Base URL                         |
+| `sub`                   | Junction Link Session ID                           |
+| `team_id`               | Junction Team ID                                   |
 | `user_id`               | Vital User ID                                   |
 </Accordion>
-<Accordion title="Vital Link API Base URL" defaultOpen>
+<Accordion title="Junction Link API Base URL" defaultOpen>
 | Environment             | Base URL |
 | ----------------------- | -------- |
 | Production US           | `https://api.tryvital.io/v2/link` 
@@ -134,7 +134,7 @@ def handle_oauth_callback(
 
     # Test if this is a JWT.
     # If so, try to extract the unverified claim payload, and see if this is
-    # a Vital Link JWT.
+    # a Junction Link JWT.
     if (
         state_string.startswith('{"')
         and (state_parts := state_string.split(".", maxsplit=3))
@@ -147,7 +147,7 @@ def handle_oauth_callback(
         return fastapi.RedirectResponse(f"{VITAL_LINK_BASE_URL}/connect/fitbit?{query}")
 
 
-    # Not a Vital Link JWT. Fallback to existing logic
+    # Not a Junction Link JWT. Fallback to existing logic
     return process_oauth_callback(...)
 
 ```
