--- a/docs/wearables/connecting-providers/errors.mdx
+++ b/docs/wearables/connecting-providers/errors.mdx
@@ -8,7 +8,7 @@ title: "Link Errors"
 
 Vital performs a 307 Temporary Redirect to the `redirect_url` specified in your Link Token in the following scenarios:
 
-* All connections via [the Vital Link widget](/wearables/connecting-providers/introduction)
+* All connections via [the Junction Link widget](/wearables/connecting-providers/introduction)
 * [Connect OAuth Provider](/api-reference/link/link-oauth-provider) endpoint used by your [Custom Widget](/wearables/connecting-providers/custom_widget)
 
 Error parameters would be appended to the `redirect_url` before the redirection. For example,
