--- a/docs/wearables/guides/dexcom.mdx
+++ b/docs/wearables/guides/dexcom.mdx
@@ -38,7 +38,7 @@ Alternatively, your user can invite `support@tryvital.io` as a follower.
 </Info>
 </Step>
 
-<Step title="Connect via Vital Link">
+<Step title="Connect via Junction Link">
 They **must** connect to Vital using their _own_ Dexcom account — the one which their Dexcom G6 app is signed into.
 This should **not** be the accounts of the followers.
 </Step>
@@ -49,7 +49,7 @@ This should **not** be the accounts of the followers.
 
 To connect your device with the *widget*, follow the link wizard ensuring and enter your username and password.
 
-## Vital Link
+## Junction Link
 
 You can also connect a Dexcom user to vital using vital client. For additional information please consult the API reference.
 
