--- a/docs/wearables/guides/dexcom_v3.mdx
+++ b/docs/wearables/guides/dexcom_v3.mdx
@@ -13,7 +13,7 @@ import BYOO from '/snippets/byoo.mdx';
 
 ## Connecting Dexcom to Vital
 
-You can connect your dexcom device to vital through Vital Link Widget or programatically like any 
+You can connect your dexcom device to vital through Junction Link Widget or programatically like any 
 other [OAuth](/api-reference/link/link-oauth-provider) provider.
 We recommend you obtain custom OAuth credentials from [Dexcom](https://developer.dexcom.com) with production access and follow the guide
 for [setting up custom credentials](/wearables/connecting-providers/bring_your_own_oauth) to get started.
