--- a/docs/wearables/guides/my_fitness_pal.mdx
+++ b/docs/wearables/guides/my_fitness_pal.mdx
@@ -4,7 +4,7 @@ title: "MyFitnessPal"
 
 ## Connecting MyFitnessPal to Vital
 
-You can now link MyFitnessPal accounts to Vital! You can do this with Vital Link Widget or programatically like other [password](/api-reference/link/link-password-provider) providers.
+You can now link MyFitnessPal accounts to Vital! You can do this with Junction Link Widget or programatically like other [password](/api-reference/link/link-password-provider) providers.
 
 ## Before Connecting
 
