--- a/docs/wearables/providers/data-ingestion-bounds.mdx
+++ b/docs/wearables/providers/data-ingestion-bounds.mdx
@@ -57,4 +57,4 @@ As long as the connection has not been marked as _paused_, you can change the in
 bounds at any time, even during the (post ingestion end) 7-day late delivery catchment period.
 
 Otherwise, the ingestion end date has no effect on any _paused_ cloud-based connections — since these connections have been
-deregistered with the data provider, the end user needs to go through the Vital Link flow to re-connect.
+deregistered with the data provider, the end user needs to go through the Junction Link flow to re-connect.
