--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -22,23 +22,23 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 | Provider (Slug)                                                          | Description                                                   | Availability                                                                         | Remarks |
 | ------------------------------------------------------------------------ | ------------------------------------------------------------- | ------------------------------------------------------------------------------------ | ------- |
-| [Beurer](https://www.beurer.com/web/gb/)         <br />`beurer_api`      | Beurer Blood Pressure monitors                                | All Vital Teams                                                                      | Password Auth |
-| [Dexcom (G6 And Older)](https://www.dexcom.com)  <br />`dexcom`          | Dexcom CGM Glucose monitors                                   | All Vital Teams                                                                      | Password Auth<br />[↗️ Guide](/wearables/guides/dexcom) |
-| [8Sleep](https://www.eightsleep.com)             <br />`eight_sleep`     | Smart Mattress                                                | All Vital Teams                                                                      | Password Auth |
-| [Abbott LibreView](https://www.libreview.com/)   <br />`abbott_libreview`| Abbott CGM Glucose monitor                                    | All Vital Teams                                                                      | Password Auth<br />[↗️ Guide](/wearables/guides/abbott-libreview) |
-| [Freestyle Libre](https://www.libreview.com/)    <br />`freestyle_libre` | Abbott CGM Glucose monitor                                    | All Vital Teams                                                                      | LibreView Practice<br />[↗️ Guide](/wearables/guides/abbott-libreview) |
-| [Fitbit](https://www.fitbit.com/global/uk/home)  <br />`fitbit`          | Activity Trackers (all devices)                               | All Vital Teams                                                                      | OAuth<br />[↗️ Guide](/wearables/guides/fitbit) |
-| [Garmin](https://www.garmin.com)                 <br />`garmin`          | Fitness watches (all devices)                                 | All Vital Teams                                                                      | OAuth<br />[↗️ Guide](/wearables/guides/garmin) |
-| [Hammerhead](https://www.hammerhead.io)          <br />`hammerhead`      | Cycling computers                                             | All Vital Teams                                                                      | Password Auth |
-| [Oura](https://ouraring.com)                     <br />`oura`            | Smart Sleep tracking ring                                     | All Vital Teams                                                                      | OAuth |
-| [Peloton](https://www.onepeloton.com)            <br />`peloton`         | Popular Indoor Exercise bike                                  | All Vital Teams                                                                      | Password Auth |
-| [Strava](https://www.strava.com)                 <br />`strava`          | Running & Cycling Social Network                              | All Vital Teams                                                                      | OAuth |
-| [Wahoo](https://wahoofitness.com)                <br />`wahoo`           | Cycling Equipment                                             | All Vital Teams                                                                      | OAuth |
-| [Withings](https://www.withings.com)             <br />`withings`        | Fitness scales, watches and health monitors                   | All Vital Teams                                                                      | OAuth |
-| [Zwift](https://zwift.com)                       <br />`zwift`           | Virtual cycling and running                                   | All Vital Teams                                                                      | Password Auth |
-| [Polar](https://www.polar.com/accesslink-api/)   <br />`polar`           | Finnish sports tech pioneer                                   | All Vital Teams                                                                      | OAuth<br />[↗️ Guide](/wearables/guides/polar) |
-| [Cronometer](https://www.cronometer.com)         <br />`cronometer`      | Nutrition data                                                | All Vital Teams                                                                      | OAuth |
-| [Ultrahuman](https://www.cronometer.com)         <br />`ultrahuman`      | Real-time nutrition and fitness tracking                      | 🧪 **Open Beta**<br />All Vital Teams                                                       | OAuth |
+| [Beurer](https://www.beurer.com/web/gb/)         <br />`beurer_api`      | Beurer Blood Pressure monitors                                | All Junction Teams                                                                      | Password Auth |
+| [Dexcom (G6 And Older)](https://www.dexcom.com)  <br />`dexcom`          | Dexcom CGM Glucose monitors                                   | All Junction Teams                                                                      | Password Auth<br />[↗️ Guide](/wearables/guides/dexcom) |
+| [8Sleep](https://www.eightsleep.com)             <br />`eight_sleep`     | Smart Mattress                                                | All Junction Teams                                                                      | Password Auth |
+| [Abbott LibreView](https://www.libreview.com/)   <br />`abbott_libreview`| Abbott CGM Glucose monitor                                    | All Junction Teams                                                                      | Password Auth<br />[↗️ Guide](/wearables/guides/abbott-libreview) |
+| [Freestyle Libre](https://www.libreview.com/)    <br />`freestyle_libre` | Abbott CGM Glucose monitor                                    | All Junction Teams                                                                      | LibreView Practice<br />[↗️ Guide](/wearables/guides/abbott-libreview) |
+| [Fitbit](https://www.fitbit.com/global/uk/home)  <br />`fitbit`          | Activity Trackers (all devices)                               | All Junction Teams                                                                      | OAuth<br />[↗️ Guide](/wearables/guides/fitbit) |
+| [Garmin](https://www.garmin.com)                 <br />`garmin`          | Fitness watches (all devices)                                 | All Junction Teams                                                                      | OAuth<br />[↗️ Guide](/wearables/guides/garmin) |
+| [Hammerhead](https://www.hammerhead.io)          <br />`hammerhead`      | Cycling computers                                             | All Junction Teams                                                                      | Password Auth |
+| [Oura](https://ouraring.com)                     <br />`oura`            | Smart Sleep tracking ring                                     | All Junction Teams                                                                      | OAuth |
+| [Peloton](https://www.onepeloton.com)            <br />`peloton`         | Popular Indoor Exercise bike                                  | All Junction Teams                                                                      | Password Auth |
+| [Strava](https://www.strava.com)                 <br />`strava`          | Running & Cycling Social Network                              | All Junction Teams                                                                      | OAuth |
+| [Wahoo](https://wahoofitness.com)                <br />`wahoo`           | Cycling Equipment                                             | All Junction Teams                                                                      | OAuth |
+| [Withings](https://www.withings.com)             <br />`withings`        | Fitness scales, watches and health monitors                   | All Junction Teams                                                                      | OAuth |
+| [Zwift](https://zwift.com)                       <br />`zwift`           | Virtual cycling and running                                   | All Junction Teams                                                                      | Password Auth |
+| [Polar](https://www.polar.com/accesslink-api/)   <br />`polar`           | Finnish sports tech pioneer                                   | All Junction Teams                                                                      | OAuth<br />[↗️ Guide](/wearables/guides/polar) |
+| [Cronometer](https://www.cronometer.com)         <br />`cronometer`      | Nutrition data                                                | All Junction Teams                                                                      | OAuth |
+| [Ultrahuman](https://www.cronometer.com)         <br />`ultrahuman`      | Real-time nutrition and fitness tracking                      | 🧪 **Open Beta**<br />All Junction Teams                                                       | OAuth |
 
 ### BYOO-only
 
@@ -61,8 +61,8 @@ Some BYOO providers do not have a developer program with open sign-up.
 
 | Provider (Slug)                                                             | Status                                                                                        | Availability | Remarks |
 | --------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- | ------------ | ------- |
-| [Google Fit](https://www.google.com/fit/)           <br /> `google_fit`     | Google will shut down Google Fit on June 30, 2025. Android Health Connect is the successor.   | All Vital Teams | OAuth<br />[↗️ Guide](/wearables/guides/google_fit) |
-| [MyFitnessPal](https://www.myfitnesspal.com)     <br />`my_fitness_pal`     | Deprecated                                                                                    | All Vital Teams | MyFitnessPal Diary Share Key<br />[↗️ Guide](/wearables/guides/my_fitness_pal) |
+| [Google Fit](https://www.google.com/fit/)           <br /> `google_fit`     | Google will shut down Google Fit on June 30, 2025. Android Health Connect is the successor.   | All Junction Teams | OAuth<br />[↗️ Guide](/wearables/guides/google_fit) |
+| [MyFitnessPal](https://www.myfitnesspal.com)     <br />`my_fitness_pal`     | Deprecated                                                                                    | All Junction Teams | MyFitnessPal Diary Share Key<br />[↗️ Guide](/wearables/guides/my_fitness_pal) |
 
 
 
