--- a/docs/wearables/sdks/health/overview.mdx
+++ b/docs/wearables/sdks/health/overview.mdx
@@ -53,7 +53,7 @@ This section applies to:
 
 This section does not apply to:
 
-* ❌ Fluter iOS apps (using Vital Flutter SDK 4.3.8 or later).
+* ❌ Fluter iOS apps (using Junction Flutter SDK 4.3.8 or later).
 
 <Note>
 Vital **Flutter** SDK (4.3.8 and later) automatically integrates with your App Delegate through the Flutter Plugin machinery.
