--- a/docs/wearables/sdks/installation.mdx
+++ b/docs/wearables/sdks/installation.mdx
@@ -121,7 +121,7 @@ pod install
 ```
 
 <Info>
-`pod install` on your iOS project might error due to version lock conflicts on the Vital iOS libraries.
+`pod install` on your iOS project might error due to version lock conflicts on the Junction iOS libraries.
 This usually happens after you have bumped the React Native SDK package versions.
 
 Use `pod update` to resolve the conflict:
@@ -142,7 +142,7 @@ dependencies:
 ```
 
 <Info>
-`pod install` on your iOS project might error due to version lock conflicts on the Vital iOS libraries.
+`pod install` on your iOS project might error due to version lock conflicts on the Junction iOS libraries.
 This usually happens after you have bumped the Flutter SDK package versions.
 
 Use `pod update` to resolve the conflict:
