--- a/docs/wearables/sdks/vital-devices.mdx
+++ b/docs/wearables/sdks/vital-devices.mdx
@@ -253,8 +253,8 @@ let result = await devicesManager.readLibre1("reading", "errored", "completed")
 ## Upload device samples to Vital
 
 <Note>
-This automatic behaviour is available since Vital iOS 1.0.0, Vital Android 3.0.0, Vital Flutter SDK 4.0.0
-and Vital React Native 4.0.0.
+This automatic behaviour is available since Junction iOS 1.0.0, Junction Android 3.0.0, Junction Flutter SDK 4.0.0
+and Junction React Native 4.0.0.
 </Note>
 
 Vital Devices SDK automatically uploads any blood pressure and glucose samples discovered during
