--- a/docs/webhooks/etl-pipelines/overview.mdx
+++ b/docs/webhooks/etl-pipelines/overview.mdx
@@ -89,5 +89,5 @@ Your new configuration is typically active as soon as the endpoint has acknowled
 Refer to the destination-specific documentation for configuration examples.
 
 <Info>
-Feel free to reach out Vital support if you need assisted setup, or if you need a Vital Org Key to access the Org Management API.
+Feel free to reach out Vital support if you need assisted setup, or if you need a Junction Management Key to access the Org Management API.
 </Info>
