--- a/docs/webhooks/event-structure.mdx
+++ b/docs/webhooks/event-structure.mdx
@@ -10,7 +10,7 @@ All our webhook events have the following standard structure:
 * A top-level `event_type` field, specifying the payload type contained in the `data` field.
 * A top-level `data` field containing the event-specific payload.
 * A set of top-level fields describing the event subject:
-  * `team_id`: Your Vital Team ID.
+  * `team_id`: Your Junction Team ID.
   * `user_id` and `client_user_id`: The unique Vital User ID.
   * `client_user_id`: Your application user reference you declared for [the Vital User](/api-reference/user/create-user).
 
