--- a/docs/changelog/wearables/providers.mdx
+++ b/docs/changelog/wearables/providers.mdx
@@ -193,7 +193,7 @@ AFib Burden<br />`afib_burden`                          | ✅              | -  
 <Info>
 <sup>[1]</sup> Irregular rhythm alerts, high heart rate alerts and low heart rate alerts.<br />
 <sup>[2]</sup> Irregular rhythm alerts only.<br />
-<sup>[3]</sup> Requires Vital iOS SDK 1.3.0+, Vital Flutter SDK 4.4.0+ or Vital React Native SDK 5.1.0+.
+<sup>[3]</sup> Requires Junction iOS SDK 1.3.0+, Junction Flutter SDK 4.4.0+ or Junction React Native SDK 5.1.0+.
 </Info>
 
 
