--- a/docs/wearables/connecting-providers/custom_widget.mdx
+++ b/docs/wearables/connecting-providers/custom_widget.mdx
@@ -6,7 +6,7 @@ import LinkSDKProvider from '/snippets/link-sdk-provider.mdx';
 
 <LinkSDKProvider />
 
-You may want to have your own custom Link widget to match your app's UI. This is useful for customers who don't want to use Vital link but still want to use the Vital API.
+You may want to have your own custom Link widget to match your app's UI. This is useful for customers who don't want to use Vital link but still want to use the Junction API.
 It's worthwhile ensuring that you have read the [Auth Types](/docs/auth-types) documentation before proceeding. A full code example in React Native can be seen [here](https://github.com/tryVital/vital-connect-rn).
 
 An overview of the process is as follows:
