--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -18,7 +18,7 @@ please do not hesitate to contact us at support@tryvital.io!
 
 When integrating with Vital, you may not own a physical device for each provider you're planning to support. For this, we provide demo users with test data so you can build and test the whole integration without touching a real device.
 
-A demo user gives you the same experience as using a real one, the only difference is that you won't go through the [Vital Link](/wearables/vital-link/introduction) flow.
+A demo user gives you the same experience as using a real one, the only difference is that you won't go through the [Junction Link](/wearables/vital-link/introduction) flow.
 
 <Warning>
 
