--- a/docs/wearables/vital-app/introduction.mdx
+++ b/docs/wearables/vital-app/introduction.mdx
@@ -11,7 +11,7 @@ Vital Connect iOS app is available for [the Grow and Scale plans](https://tryvit
   [here](https://apps.apple.com/us/app/vital-connect/6444167196).
 </Note>
 
-The Vital iOS app allows your customers to quickly sync their Apple HealthKit data with you. This is quite handy if you don't have an iOS app, but you still want to analyse the data stored in the Apple Health app.
+The Junction iOS app allows your customers to quickly sync their Apple HealthKit data with you. This is quite handy if you don't have an iOS app, but you still want to analyse the data stored in the Apple Health app.
 
 <div className="flex flex-row justify-between">
   <img noZoom src="/img/activity_small.png" width={"45%"} />
